# zpp-compiler

./: .gitignore  CMakeLists.txt  README.md  build.sh  setenv.sh
.github/workflows/: python-tests.yml
asm_testbase/: simple.asm  tmp_printcall.asm
cpp_testbase/: comparisons.cpp  conditional_statement.cpp  declaration.cpp  do_while_statement.cpp  expressions.cpp  for_statement.cpp  function_call.cpp  hello_world_basic.cpp  pointers.cpp  scopes.cpp  simple.cpp  while_statement.cpp
cpp_testbase/failing/: forbidden_trailing.cpp  referenced_before_declaration.cpp  required_trailing.cpp
cpp_testbase/ignored_characters/: comments.cpp  line_comment_end.cpp  multiline_comment_end.cpp
cpp_testbase/object_oriented/: simple_class.cpp
src/: errors.hpp  logger.hpp  main.cpp
src/ast/: CodeGeneratorEvaluator.ipp  DebugEvaluator.hpp  DecoratorEvaluator.ipp  InterfaceEvaluator.hpp  MockEvaluator.hpp  literalTypes.hpp  litteralTypes.hpp  nodes.hpp
src/ast/nodes/: Assign.ipp  UnaryOperation.ipp  nodes.h  nodes.ipp  nodes_debug.cpp  nodes_debug.ipp  nodes_decorate.cpp  nodes_decorate.ipp  nodes_genAsm_x86_64.cpp  nodes_genAsm_x86_64.ipp  nodes_loadValueInRegister.ipp
src/ast/scopes/: memory_x86_64.hpp  registers.hpp  scopeStack.hpp  types.hpp
src/codegen/: GPRegisterSet.hpp  assemble.hpp  generate.hpp  linking.hpp
src/core/: TranslationUnitHandle.hpp  errors.hpp  utils.hpp
src/dbg/: argparse.hpp  errors.hpp  iohelper.hpp  logger.hpp  utils.hpp
src/interface/: AstNode.hpp
src/lexing_parsing/: ast.hpp  lexer.ipp  parser.ipp
stdlib/zpp/: stdlibc.cpp  stdlibc.hpp  stdlibc.zpp
stdlib_cppcomp/asm_generated/: stdlibc.asm
stdlib_cppcomp/cpp/: stdlibc.cpp
test/: config.py  pyproject.toml
test/regression/: cpp_testbase_e2e.py  cpp_testbase_test.py
test/regression/baseline/cpp_testbase/: comparisons-compile.stdout  comparisons-exec.stdout  comparisons.asm  comparisons.out  comparisons.stdout  conditional_statement-compile.stdout  conditional_statement-exec.stdout  conditional_statement.asm  conditional_statement.out  conditional_statement.stdout  declaration-compile.stdout  declaration.asm  declaration.out  declaration.stdout  do_while_statement-compile.stderr  do_while_statement-compile.stdout  do_while_statement.asm  do_while_statement.stdout  expressions-compile.stdout  expressions-exec.stdout  expressions.asm  expressions.out  expressions.stdout  for_statement-compile.stdout  for_statement.asm  for_statement.out  for_statement.stdout  function_call-compile.stdout  function_call.asm  function_call.out  function_call.stdout  hello_world-compile.stdout  hello_world.stdout  hello_world_basic-compile.stdout  hello_world_basic.stdout  scopes-compile.stdout  scopes.asm  scopes.out  scopes.stdout  simple-compile.stdout  (+8 more)
test/regression/baseline/cpp_testbase/failing/: forbidden_trailing-compile.stdout  forbidden_trailing.stdout  just_slash-compile.stderr  just_slash-compile.stdout  just_slash.stdout  referenced_before_declaration-compile.stdout  referenced_before_declaration.stdout  required_trailing-compile.stdout  required_trailing.stdout
test/regression/baseline/cpp_testbase/ignored_characters/: comments.out  comments.stdout  line_comment_end.asm  line_comment_end.out  line_comment_end.stdout  multiline_comment_end-compile.stdout  multiline_comment_end.asm  multiline_comment_end.out  multiline_comment_end.stdout
test/regression/baseline/cpp_testbase/object_oriented/: simple_class-compile.stdout  simple_class.stderr  simple_class.stdout
tools/: setenv.sh
