[tool.poetry]
name = "zpp-test"
version = "0.1.0"
description = ""
authors = ["Quinten Bons <QuintenBons@outlook.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^8.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
